--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://varshneymehul.github.io/keeper",
+  "homepage": "https://keeper-app-react1.herokuapp.com/",
   "name": "keeper-app",
   "version": "1.0.0",
   "description": "",
