--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://varshneymehul.github.io/Keeper/",
+  "homepage": "https://varshneymehul.github.io/Keeper",
   "name": "keeper-app",
   "version": "1.0.0",
   "description": "",
